fix bug input ui on ios

--- a/game/4digit/main.css
+++ b/game/4digit/main.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 body {
   background-color: #fff;
   margin: 0;
